@@ -1,3 +1,5 @@
+import sbtjooq.codegen.CodegenMode.Unmanaged
+
 ThisBuild / scalaVersion     := "3.3.4"
 ThisBuild / intellijPlatform := IntelliJPlatform.IdeaCommunity
 ThisBuild / intellijBuild    := "242.20224.300"
@@ -13,7 +15,6 @@ lazy val codeEpiphany = (project in file("."))
       "-feature",
       "-deprecation"
     ),
-    javacOptions ++= Seq("--enable-preview"),
     intellijAttachSources          := true,
     instrumentThreadingAnnotations := true,
     bundleScalaLibrary             := true,
@@ -42,14 +43,32 @@ lazy val codeEpiphany = (project in file("."))
       "org.http4s"          %% "http4s-circe"     % "0.23.30",
       "com.squareup.okhttp3" % "okhttp"           % "4.12.0",
       "org.jsoup"            % "jsoup"            % "1.18.3",
-      "org.scalatest"       %% "scalatest"        % "3.2.19" % Test,
-      "junit"                % "junit"            % "4.13.2" % Test,
-      "org.hamcrest"         % "hamcrest"         % "3.0"    % Test,
-      "com.novocode"         % "junit-interface"  % "0.11"   % Test,
-      "org.opentest4j"       % "opentest4j"       % "1.3.0"  % Test
+      // add jooq and sqlite,
+      "org.jooq"       % "jooq"            % "3.19.16",
+      "org.jooq"       % "jooq-meta"       % "3.19.16",
+      "org.jooq"       % "jooq-codegen"    % "3.19.16",
+      "org.xerial"     % "sqlite-jdbc"     % "3.47.2.0",
+      "org.xerial"     % "sqlite-jdbc"     % "3.47.2.0" % JooqCodegen,
+      "org.flywaydb"   % "flyway-core"     % "11.1.0",
+      "com.zaxxer"     % "HikariCP"        % "6.2.1",
+      "org.scalatest" %% "scalatest"       % "3.2.19"   % Test,
+      "junit"          % "junit"           % "4.13.2"   % Test,
+      "org.hamcrest"   % "hamcrest"        % "3.0"      % Test,
+      "com.novocode"   % "junit-interface" % "0.11"     % Test,
+      "org.opentest4j" % "opentest4j"      % "1.3.0"    % Test
+    ).map(
+      _.exclude("org.slf4j", "*")
+        .exclude("org.typelevel", "log4cats-slf4j_3")
+        .exclude("org.jetbrains.kotlin", "*")
     ),
     Compile / unmanagedSourceDirectories += baseDirectory.value / "gen",
+    Compile / unmanagedSourceDirectories += baseDirectory.value / "src" / "main" / "jooq-generated",
     Compile / unmanagedResourceDirectories += baseDirectory.value / "resources",
-    Test / unmanagedResourceDirectories += baseDirectory.value / "testResources"
+    Test / unmanagedResourceDirectories += baseDirectory.value / "testResources",
+
+    // jooq
+    jooqVersion       := "3.19.16",
+    jooqCodegenConfig := file("jooq-codegen.xml"),
+    jooqCodegenMode   := Unmanaged
   )
-  .enablePlugins(SbtIdeaPlugin)
+  .enablePlugins(SbtIdeaPlugin, JooqCodegenPlugin)
